--- a/style.css
+++ b/style.css
@@ -1,110 +1,223 @@
 :root {
-  --primary-color: #6c63ff;
-  --secondary-color: #f5f2fe;
-  --box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+  --branding-color: #6c63ff;
+  --secondary-color: #f9f7fe;
+  --heading-font-family: "Playfair Display", serif;
+  --default-font-family: "Poppins", sans-serif;
 }
 
 body {
-  margin: 100px 0;
-  /* max-width: 800px; */
+  font-family: var(--default-font-family);
+  overflow-x: hidden;
 }
+
 h1,
 h2,
-h3 {
-  text-align: center;
-  /* margin: 0; */
+h3,
+h4,
+h5,
+h6 {
+  color: black;
+  font-family: var(--heading-font-family);
+  font-weight: bold;
 }
 
 h1 {
-  font-size: 80px;
-}
-
-h2 {
-  font-size: 40px;
-}
-
-h3 {
-  font-size: 24px;
-  opacity: 0.7;
-}
-
-p {
-  font-size: 18px;
+  font-size: 96px;
   line-height: 1.5;
 }
 
-.navigation-links {
-  display: flex;
-  margin-top: 40px;
-  justify-content: center;
+h2 {
+  font-size: 64px;
 }
 
-.navigation-links a {
-  margin: 20px;
-  border-radius: 4px;
-  padding: 20px 15px;
-  text-decoration: none;
-  text-transform: capitalize;
+h3 {
+  font-size: 48px;
 }
 
-.contact-link {
-  background: var(--primary-color);
-  box-shadow: var(--box-shadow);
-  color: white;
-}
-.about-link {
-  color: var(--primary-color);
-  border: 1px solid var(--primary-color);
+p {
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 30px;
 }
 
-.homepage-link {
-  color: var(--primary-color);
+.hero {
+  background: var(--secondary-color);
   text-align: center;
-  display: block;
+  padding: 80px 20px;
 }
 
-.about-paragraphs {
-  margin: 30px 0;
+.hero p {
+  font-size: 36px;
+  font-weight: bold;
+  margin: 0;
+  color: #272142;
 }
 
-.about-paragraphs p {
-  margin: 10px;
+.hero h2 {
+  font-family: var(--heading-font-family);
+  font-weight: normal;
+  line-height: 1.5;
+  font-size: 24px;
 }
 
-.email-link {
-  display: flex;
-  justify-content: center;
-  color: var(--primary-color);
-  font-size: 28px;
-  text-decoration: none;
+.content-container {
+  padding: 60px 20px;
 }
 
-.email-link:hover {
-  text-decoration: underline;
+.content h1 {
+  font-size: 64px;
+  line-height: 80px;
 }
-.primary-link {
-  color: white;
+
+.content h2 {
+  font-size: 18px;
+  font-family: var(--default-font-family);
+}
+
+.content h3 {
+  font-size: 24px;
+  line-height: 1.5;
+
+  font-family: var(--default-font-family);
+}
+
+.content p {
+  font-size: 14px;
+}
+
+.content {
+  margin: 30px;
+}
+
+.btn-branding {
+  background: var(--branding-color);
   border-radius: 4px;
-  padding: 20px 15px;
+  color: white;
   text-decoration: none;
-  text-transform: capitalize;
-  background: var(--primary-color);
-  box-shadow: var(--box-shadow);
-  /* margin: 2.5em 0; */
+  font-size: 18px;
+  line-height: 27px;
+  padding: 15px 30px;
 }
-@media  (max-width: 576px) {
-  h1{
-    font-size: 48px;
+
+.btn-branding:hover {
+  background-color: white;
+  color: #7e67f4;
+  border: 2px solid #7e67f4;
+}
+
+.btn-branding-outline {
+  color: var(--branding-color);
+  border: 1px solid var(--branding-color);
+  border-radius: 4px;
+  font-size: 18px;
+  text-decoration: none;
+  line-height: 27px;
+  padding: 15px 30px;
+}
+
+.btn-branding-outline:hover {
+  background: var(--branding-color);
+  color: white;
+}
+
+.project-description {
+  padding: 120px 60px;
+}
+
+.logo {
+  max-height: 40px;
+}
+
+nav {
+  padding: 20px 0;
+}
+
+nav ul {
+  padding: 0;
+  margin: 0;
+}
+
+nav li {
+  display: inline;
+  list-style: none;
+  line-height: 42px;
+  margin-left: 15px;
+}
+
+nav a {
+  text-decoration: none;
+  color: #272142;
+  transition: all 100ms ease-in-out;
+}
+
+nav a:hover,
+nav li.active a {
+  color: var(--branding-color);
+}
+
+footer {
+  margin: 60px 0;
+}
+
+footer .contact-box {
+  background: var(--secondary-color);
+  padding: 30px 120px;
+  border-radius: 10px;
+}
+
+footer .contact-box p {
+  margin: 0;
+}
+
+footer .email-link {
+  text-decoration: none;
+  color: black;
+  font-size: 24px;
+}
+
+footer .email-link:hover {
+  color: var(--branding-color);
+}
+
+footer .social-links a {
+  margin: 0 20px;
+  color: var(--branding-color);
+  background: var(--secondary-color);
+  padding: 10px 14px;
+  border-radius: 50%;
+  font-size: 18px;
+  transition: all 100ms ease-in-out;
+}
+
+footer .social-links a:hover {
+  color: white;
+  background: var(--branding-color);
+}
+
+@media (max-width: 900px) {
+  h1 {
+    font-size: 44px;
     line-height: 1.5;
   }
-  h2{
-    font-size: 24px;
+
+  h2 {
+    font-size: 44px;
   }
-}
-h3{
-  font-size: 18px;
-}
-.primary-link{
-  display: block;
-  padding: 10px;
+
+  h3 {
+    font-size: 26px;
+  }
+
+  .content {
+    text-align: center;
+    padding: 0;
+  }
+
+  .project-description {
+    padding: 0;
+    text-align: center;
+  }
+  footer .email-link{
+    font-size: 16px;
+  }
 }
